$Id: NEWS,v 1.483 2003-09-27 18:40:10 castaglia Exp $

CVS
---------------------------------
- Bug 2167 - getnameinfo() on FreeBSD doesn't support IP address lookups.
- Bug 2176 - getnameinfo() error on Cygwin during startup.
  The sa_family member of the address was not being properly initialized
  in some instances.
- Bug 2179 - ROOT_UID instead of ROOT_GID used in setegid() call.
  This affects Cygwin installations.
- Fixed ASCII file remote exploit discovered by X-Force at ISS:
    http://xforce.iss.net/xforce/alerts/id/154
- Bug 2181 - IPv4 active transfers don't work when using --enable-ipv6.
  IPv4-mapped IPv6 addresses were not being properly compared for active
  data transfers.
- Bug 2200 - Correct segfaults with xlate_ascii_write() on IRIX.

1.2.9rc2 - Released 11-Sep-2003
---------------------------------
- Bug 2051 - freebytes in TransferRate does not work properly.
- Bug 2043 - Proftpd converts LF to CRLF on PUT on Cygwin.  This turned out
  to be caused by the Cygwin layer.  The fix was to use the Cygwin-specific
  O_BINARY open() flag when opening binary files on Cygwin.
- Bug 1804 - Permit selection of additional contrib modules when building
  the RPM
- Bug 2074 - MaxStoreFileSize restriction capabilities ignored.  This bug
  was affecting MaxRetrieveFileSize as well.
- Bug 2075 - LIST / fails under Cygwin.  This was due to the addition of
  an additional path separator character; Cygwin treats paths that start
  with "//" differently than paths that start with "/".
- Bug 2076 - The --enable-transfer-buffer-size configure option doesn't work
  properly.  It was overriding the --enable-buffer-size option, rather than
  the corresponding tunable buffer size.
- Bug 2069 - Long MKD path causes truncated server response.
- Fixed handling of %N/%y in DisplayConnect files.
- Bug 2083 - "550 Access denied" on group permission with AuthGroupFile.  This
  was caused by a strictly linear search in the AuthGroupFile from the